rucq/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rucq-admin
  labels:
    app: rucq-admin

spec:
  selector:
    matchLabels:
      app: rucq-admin
  template:
    metadata:
      labels:
        app: rucq-admin
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - las211.tokyotech.org
              weight: 1

      containers:
        - name: rucq-admin
          image: ghcr.io/traptitech/rucq-admin:1.0.1
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
            limits:
              cpu: "200m"
              memory: "200Mi"
