rucq/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rucq-backend
  labels:
    app: rucq-backend

spec:
  selector:
    matchLabels:
      app: rucq-backend
  template:
    metadata:
      labels:
        app: rucq-backend
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - las211.tokyotech.org
              weight: 1

      containers:
        - name: rucq-backend
          image: ghcr.io/traptitech/rucq:1.1.2
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
            limits:
              cpu: "200m"
              memory: "300Mi"
