rucq/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rucq
  labels:
    app: rucq

spec:
  selector:
    matchLabels:
      app: rucq
  template:
    metadata:
      labels:
        app: rucq
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - las211.tokyotech.org
              weight: 1

      containers:
        - name: rucq-frontend
          image: ghcr.io/traptitech/rucq-ui:0.0.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
            limits:
              cpu: "200m"
              memory: "200Mi"

        - name: rucq-admin-frontend
          image: ghcr.io/traptitech/rucq-admin:0.0.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
            limits:
              cpu: "200m"
              memory: "200Mi"

        - name: rucq-backend
          image: ghcr.io/traptitech/rucq:0.2.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
            limits:
              cpu: "200m"
              memory: "300Mi"
