rucq/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rucq-admin-service

spec:
  type: ClusterIP
  selector:
    app: rucq-admin
  ports:
    - name: http
      port: 80
      targetPort: 80
