rucq/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rucq-backend-service

spec:
  type: ClusterIP
  selector:
    app: rucq-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
