rucq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rucq-service

spec:
  type: ClusterIP
  selector:
    app: rucq
  ports:
    - name: rucq-frontend
      port: 80
      targetPort: 80
    - name: rucq-admin-frontend
      port: 81
      targetPort: 80
    - name: rucq-backend
      port: 82
      targetPort: 80
